--- a/src/app/lugares/lugares.component.css
+++ b/src/app/lugares/lugares.component.css
@@ -5,3 +5,8 @@ agm-map{
   background-color: aliceblue;
   color: blue;
 }
+#cuadrado{
+  width: 200px;
+  height: 200px;
+  background-color: chocolate;
+}
